tooling/nargo_cli/tests/snapshots/execute__tests__execution_success_inline_never_basic_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "12677174757978454864",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUsRKCMAxNBdTq6aCDi266V0VhZNAP6cnxHXy61zPREMoi7bvjWkh57yVNq+ADhY9DiuME+qA1FY5mHM4BuUxMnyqSz69RPlcwXPgTjhq6m+TiScCEtcdTKP7S5HftyS+g/6tmnBH4L8SfxuE3M+R5tF1+ELor6B5e/g/F+EF+YmyOcZqvca4FX4x9555C123r8U9aS8x1J3KN1CP5SuwVB8Uypq1EbOrJwXc3JOKd5+TyPTBeuY6whN+dkrZdngq/mxEoSmNIL0H+DPreuX4m1u/xfSH8U42rP302hT03V9vYm63r/GU3gt9hqId4ncjzUP/5zhZAuN5XQi/1+OP6mVh/FD5j3W2yvlzL1fcNxRwFc5UIAAA=",
  "debug_symbols": "lZLBCoQgFEX/5a1dpI5N068MQ1i9QhANs4Eh+vfRoYXEbN5GvHLOXcjdYcR+mzvjJr9C+9zB+kFH411K+8GgD8ZaM3flM1T54OrHr4t2Oa5RhwitbBigG6FVKtmTsZiu1fFiwGsifyfyDZF/0HhREXlO4+Xffi7qU+BSXA1ONgTZkGTjRjYUzThSeutgdG/xnOm0uaFYbfwseBnwEvyA4xYwT7lYcf51IZloUm2q/gI=",
  "file_map": {
    "50": {
      "source": "fn main(x: Field, y: pub Field) {\n    basic_check(x, y);\n}\n\n#['inline(never)]\nfn basic_check(x: Field, y: Field) {\n    assert(x != y);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
