tooling/nargo_cli/tests/snapshots/execute__tests__execution_success_main_bool_arg_force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "6634331549594623364",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "boolean"
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/7WS3Q6CMAyF2QZRr4X3WNkG3R2vInG8/yOocY1NxSvLSZbuhxy+ns00b7nn6Orc1LURg/ZsrVy0Xmr1/wm4V/BTjGUeCwS4+TGvmHxM64SAkDDdRwyhYMQ5r3n2GWIosKUctmrWCkYuq8xtFLmtHpfnvbsjm3fKATgGruX74mxlGM3ncf8ShXgRdWDnTjFP8u+P8fennR4HNu9FnzybRYmB/OgeuuZbVpzRt2fBZ/T5QLK4nX+RrrX2bI/yfACB8ZRhaQUAAA==",
  "debug_symbols": "lY7JCoMwEIbfZc4eTO1GXqUUyTKRgZCELIUSfPdGUZDSS2/z/RtTQaMs00jO+AT8UcF6JTJ516jCaZVSEG6hlEXMwO/XDtDpdtzmDgxZBH7p52cHw68469mWZ2z4Kpz/KzSQkaylaTy+2eSXiCSkxQ1Ncerg5nfYnb0foleoS8RlafXa/Ac=",
  "file_map": {
    "50": {
      "source": "fn main(x: bool, y: [bool; 2]) {\n    if x {\n        assert(1 != 2);\n    }\n\n    assert(x);\n    assert(y[0] != y[1]);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_invert"
  ]
}
