tooling/nargo_cli/tests/snapshots/execute__tests__execution_success_negated_jmpif_condition_force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "14234597361413815376",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUOw7CMAx1+gHCRyAYEAsssIef2rEDF4moeo4enVayFWNSBkgsRU4U5z37OYkCZwp9JtbgianQm//sHBDLeBP9ZhRzQq/RJ2w/DVisFrwh8Utzu2tPfQHzv2rEjKkPYUbAN2PEebQOX9bS2wLX/A7RmUk35uDmC5xrcSZGbyNqbzae/IlrhrUehD4J00cNeID3fpIlQreU7VWBalrBcI8j8lrioo80B//d4Hmo8HlccpHHDv2oG1uc+zRSLI7OLOHzbcr+J6Le1IOZi9i90CETGlVhtDBrhguCawbu78/a8PxFaQzxpq3Tgd89EPy5iD/iejpQR/Vjnk1hz83VNvZu6/r2tFKn3vg/8AJXZVQqMQgAAA==",
  "debug_symbols": "ldLBCoQgFAXQf3lrFzpqVr8SQ1hZCKJhNjBE/z42uAhp40Z8cu5byD1gUsO+9NrOboO2O8C4UQbtbJyOE8HgtTF66e/PgK+DsL/fVmmvcQvSB2gZRqDsFC8kpmdtFLQcn28EhBf6qtCLQl8/eU6S53XumzL/ok9e0OQFyz0v9I//07DkCcZ5QJQG6tJAUxQ44/SRXsvBqFS3ebfjrX3hu6qsiKt3o5p2r65K3toYz44SRKu4Nq7+AQ==",
  "file_map": {
    "50": {
      "source": "fn main(mut x: Field) {\n    let mut q = 0;\n\n    if x != 10 {\n        q = 2;\n    }\n\n    assert(q == 2);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
